tests/rune_literal_nonconst_to_i8_bad.stderr
tests/rune_literal_nonconst_to_i8_bad.hop:4:15: error: HOP2004: type mismatch: cannot use 'r' of type rune as i8
