tests/rune_literal_nonconst_to_i8_bad.hop
// Verifies rune literal nonconst to i8 is rejected.
fn main() {
	var r rune = 'A'
	var x i8   = r
}
